--- a/l10n/po/ja_JP/_guides/azure-functions-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/azure-functions-http.adoc.po
@@ -54,7 +54,7 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:25
 msgid "less than 15 minutes"
-msgstr "15分以内"
+msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/azure-functions-http.adoc:26
