--- a/l10n/po/ja_JP/_guides/kafka-streams.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-streams.adoc.po
@@ -43,9 +43,8 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/kafka-streams.adoc:17
-#, fuzzy
 msgid "less than 30 minutes"
-msgstr "三十分以内"
+msgstr "30分以内"
 
 #. type: Plain text
 #: upstream/_guides/kafka-streams.adoc:18
@@ -128,7 +127,6 @@ msgstr "これらの設定を併用することで、アプリケーションを
 #: upstream/_guides/kafka-streams.adoc:51
 #: upstream/_guides/kafka-streams.adoc:69
 #: upstream/_guides/kafka-streams.adoc:811
-#, fuzzy, no-wrap
 msgid "Architecture"
 msgstr "アーキテクチャ"
 
@@ -182,7 +180,6 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/kafka-streams.adoc:71
-#, fuzzy, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
