--- a/l10n/po/ja_JP/_guides/microprofile-health.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-health.adoc.po
@@ -49,9 +49,8 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-health.adoc:23
-#, fuzzy
 msgid "less than 15 minutes"
-msgstr "15分以内"
+msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-health.adoc:24
@@ -70,7 +69,6 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_guides/microprofile-health.adoc:27
-#, fuzzy, no-wrap
 msgid "Architecture"
 msgstr "アーキテクチャ"
 
@@ -82,7 +80,6 @@ msgstr "このガイドでは、仕様に従って `/q/health/live` および `/
 
 #. type: Title ==
 #: upstream/_guides/microprofile-health.adoc:33
-#, fuzzy, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
