--- a/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-web-authentication.adoc.po
@@ -62,9 +62,8 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:24
-#, fuzzy
 msgid "less than 15 minutes"
-msgstr "15分以内"
+msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:25
@@ -95,7 +94,6 @@ msgstr "ドッカー"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:30
-#, fuzzy, no-wrap
 msgid "Architecture"
 msgstr "アーキテクチャ"
 
@@ -119,7 +117,6 @@ msgstr "このページは保護されており、認証されたユーザーの
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-web-authentication.adoc:38
-#, fuzzy, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
