--- a/l10n/po/ja_JP/_guides/spring-cloud-config-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-cloud-config-client.adoc.po
@@ -44,9 +44,8 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/spring-cloud-config-client.adoc:20
-#, fuzzy
 msgid "less than 15 minutes"
-msgstr "15分以内"
+msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/spring-cloud-config-client.adoc:21
@@ -65,7 +64,6 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_guides/spring-cloud-config-client.adoc:25
-#, fuzzy, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
@@ -89,7 +87,6 @@ msgstr "このガイドに必要な Config Server を立ち上げるには、 li
 
 #. type: Title ==
 #: upstream/_guides/spring-cloud-config-client.adoc:34
-#, fuzzy, no-wrap
 msgid "Creating the Maven project"
 msgstr "Mavenプロジェクトの作成"
 
