--- a/l10n/po/ja_JP/_guides/spring-security.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-security.adoc.po
@@ -50,9 +50,8 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/spring-security.adoc:22
-#, fuzzy
 msgid "less than 15 minutes"
-msgstr "15分以内"
+msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/spring-security.adoc:23
@@ -77,7 +76,6 @@ msgstr "Spring Web エクステンションに慣れている"
 
 #. type: Title ==
 #: upstream/_guides/spring-security.adoc:28
-#, fuzzy, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
@@ -99,7 +97,6 @@ msgstr "ソリューションは `spring-security-quickstart` {quickstarts-tree-
 
 #. type: Title ==
 #: upstream/_guides/spring-security.adoc:37
-#, fuzzy, no-wrap
 msgid "Creating the Maven project"
 msgstr "Mavenプロジェクトの作成"
 
