--- a/l10n/po/ja_JP/_guides/building-my-first-extension.adoc.po
+++ b/l10n/po/ja_JP/_guides/building-my-first-extension.adoc.po
@@ -62,9 +62,8 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:29
-#, fuzzy
 msgid "less than 30 minutes"
-msgstr "三十分以内"
+msgstr "30分以内"
 
 #. type: Plain text
 #: upstream/_guides/building-my-first-extension.adoc:30
