--- a/l10n/po/ja_JP/_guides/funqy-amazon-lambda.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-amazon-lambda.adoc.po
@@ -50,9 +50,8 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda.adoc:23
-#, fuzzy
 msgid "less than 30 minutes"
-msgstr "三十分以内"
+msgstr "30分以内"
 
 #. type: Plain text
 #: upstream/_guides/funqy-amazon-lambda.adoc:24
