--- a/l10n/po/ja_JP/_guides/funqy-http.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-http.adoc.po
@@ -49,7 +49,7 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 #. type: Plain text
 #: upstream/_guides/funqy-http.adoc:26
 msgid "less than 15 minutes"
-msgstr "15分以内"
+msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/funqy-http.adoc:27
