--- a/l10n/po/ja_JP/_guides/kogito.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito.adoc.po
@@ -49,9 +49,8 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:26
-#, fuzzy
 msgid "less than 15 minutes"
-msgstr "15分以内"
+msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/kogito.adoc:27
@@ -125,7 +124,6 @@ msgstr "モデラーのインストールを避けるために、 link:https://b
 
 #. type: Title ==
 #: upstream/_guides/kogito.adoc:48
-#, fuzzy, no-wrap
 msgid "Architecture"
 msgstr "アーキテクチャ"
 
@@ -173,7 +171,6 @@ msgstr "ビジネスルールでは、意思決定ロジックを、宣言的な
 
 #. type: Title ==
 #: upstream/_guides/kogito.adoc:70
-#, fuzzy, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
