--- a/l10n/po/ja_JP/_guides/microprofile-metrics.adoc.po
+++ b/l10n/po/ja_JP/_guides/microprofile-metrics.adoc.po
@@ -64,7 +64,7 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:32
 msgid "less than 15 minutes"
-msgstr "15分以内"
+msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/microprofile-metrics.adoc:33
