--- a/l10n/po/ja_JP/_guides/rest-json.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-json.adoc.po
@@ -55,7 +55,7 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 #. type: Plain text
 #: upstream/_guides/rest-json.adoc:21
 msgid "less than 15 minutes"
-msgstr "15分以内"
+msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/rest-json.adoc:22
