--- a/l10n/po/ja_JP/_guides/spring-data-rest.adoc.po
+++ b/l10n/po/ja_JP/_guides/spring-data-rest.adoc.po
@@ -44,9 +44,8 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/spring-data-rest.adoc:22
-#, fuzzy
 msgid "less than 15 minutes"
-msgstr "15分以内"
+msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/spring-data-rest.adoc:23
@@ -65,7 +64,6 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_guides/spring-data-rest.adoc:26
-#, fuzzy, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
@@ -87,7 +85,6 @@ msgstr "ソリューションは `spring-data-rest-quickstart` {quickstarts-tree
 
 #. type: Title ==
 #: upstream/_guides/spring-data-rest.adoc:35
-#, fuzzy, no-wrap
 msgid "Creating the Maven project"
 msgstr "Mavenプロジェクトの作成"
 
