--- a/l10n/po/ja_JP/_guides/validation.adoc.po
+++ b/l10n/po/ja_JP/_guides/validation.adoc.po
@@ -53,9 +53,8 @@ msgstr "このガイドを完成させるには、以下が必要です:"
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:20
-#, fuzzy
 msgid "less than 15 minutes"
-msgstr "15分以内"
+msgstr "15分未満"
 
 #. type: Plain text
 #: upstream/_guides/validation.adoc:21
@@ -74,7 +73,6 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Title ==
 #: upstream/_guides/validation.adoc:24
-#, fuzzy, no-wrap
 msgid "Architecture"
 msgstr "アーキテクチャ"
 
@@ -90,7 +88,6 @@ msgstr "image:validation-guide-architecture.png[alt=Architecture]"
 
 #. type: Title ==
 #: upstream/_guides/validation.adoc:32
-#, fuzzy, no-wrap
 msgid "Solution"
 msgstr "ソリューション"
 
@@ -111,7 +108,6 @@ msgstr "ソリューションは `validation-quickstart` {quickstarts-tree-url}/
 
 #. type: Title ==
 #: upstream/_guides/validation.adoc:41
-#, fuzzy, no-wrap
 msgid "Creating the Maven project"
 msgstr "Mavenプロジェクトの作成"
 
