--- a/l10n/po/ja_JP/_guides/mongodb.adoc.po
+++ b/l10n/po/ja_JP/_guides/mongodb.adoc.po
@@ -3,37 +3,35 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-02-11 02:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-16 21:39+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/mongodb.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Using the MongoDB Client"
 msgstr "Quarkus - MongoDBクライアントを使用する"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:10
-#, fuzzy
 msgid "MongoDB is a well known NoSQL Database that is widely used."
 msgstr "MongoDBは広く使われているNoSQLデータベースとして知られています。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:12
-#, fuzzy
 msgid "In this guide, we see how you can get your REST services to use the MongoDB database."
 msgstr "このガイドでは、RESTサービスでMongoDBデータベースを使用する方法を見ていきます。"
 
@@ -70,7 +68,6 @@ msgstr "Apache Maven {maven-version}"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:22
-#, fuzzy
 msgid "MongoDB installed or Docker installed"
 msgstr "MongoDBがインストールされているか、Dockerがインストールされているか"
 
@@ -81,19 +78,16 @@ msgstr "アーキテクチャ"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:26
-#, fuzzy
 msgid "The application built in this guide is quite simple: the user can add elements in a list using a form and the list is updated."
-msgstr "このガイドで構築されたアプリケーションは非常にシンプルです:ユーザーはフォームを使用してリストに要素を追加することができ、リストは更新されます。"
+msgstr "このガイドで構築されるアプリケーションは非常にシンプルです:ユーザーはフォームを使用してリストに要素を追加することができ、リストは更新されます。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:28
-#, fuzzy
 msgid "All the information between the browser and the server is formatted as JSON."
 msgstr "ブラウザとサーバー間の情報はすべてJSON形式になっています。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:30
-#, fuzzy
 msgid "The elements are stored in MongoDB."
 msgstr "要素はMongoDBに格納されています。"
 
@@ -114,7 +108,6 @@ msgstr "Gitレポジトリをクローンするか `git clone {quickstarts-clone
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:39
-#, fuzzy
 msgid "The solution is located in the `mongodb-quickstart` {quickstarts-tree-url}/mongodb-quickstart[directory]."
 msgstr "ソリューションは `mongodb-quickstart` {quickstarts-tree-url}/mongodb-quickstart[directory] にあります。"
 
@@ -143,13 +136,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:57
-#, fuzzy
 msgid "This command generates a Maven structure importing the RESTEasy/JAX-RS, Jackson, Mutiny, Context Propagation and MongoDB Client extensions.  After this, the quarkus-mongodb-client extension has been added to your `pom.xml`."
-msgstr "このコマンドは、RESTEasy/JAX-RS、Jackson、Mutiny、Context Propagation、MongoDBクライアント拡張をインポートするMaven構造体を生成します。この後、quarkus-mongodb-client エクステンションが `pom.xml` ."
+msgstr "このコマンドは、RESTEasy/JAX-RS、Jackson、Mutiny、Context Propagation、MongoDBクライアントエクステンションをインポートするMaven構造を生成します。この後、quarkus-mongodb-client エクステンションが `pom.xml` に追加されます。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:60
-#, fuzzy
 msgid "If you already have your Quarkus project configured, you can add the `mongodb-client` extension to your project by running the following command in your project base directory:"
 msgstr "すでにQuarkusプロジェクトが設定されている場合は、プロジェクトのベースディレクトリーで以下のコマンドを実行することで、プロジェクトに `mongodb-client` エクステンションを追加することができます。"
 
@@ -176,19 +167,17 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/mongodb.adoc:76
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating your first JSON REST service"
 msgstr "初めてのJSON RESTサービスの作成"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:79
-#, fuzzy
 msgid "In this example, we will create an application to manage a list of fruits."
 msgstr "この例では、果物のリストを管理するアプリケーションを作成します。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:81
-#, fuzzy
 msgid "First, let's create the `Fruit` bean as follows:"
 msgstr "まず、以下のように `Fruit` Bean を作成してみましょう。"
 
@@ -333,13 +322,11 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:145
-#, fuzzy
 msgid "Nothing fancy. One important thing to note is that having a default constructor is required by the JSON serialization layer."
 msgstr "派手なことは何もありません。注意すべき重要なことは、デフォルトのコンストラクタを持つことはJSONシリアライズレイヤーで必須であるということです。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:147
-#, fuzzy
 msgid "Now create a `org.acme.mongodb.FruitService` that will be the business layer of our application and store/load the fruits from the mongoDB database."
 msgstr "今、私たちのアプリケーションのビジネス層となる `org.acme.mongodb.FruitService` を作成し、mongoDB データベースからフルーツを保存/ロードします。"
 
@@ -429,7 +416,6 @@ msgstr ""
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:199
-#, fuzzy
 msgid "Now, edit the `org.acme.mongodb.FruitResource` class as follows:"
 msgstr "ここで、 `org.acme.mongodb.FruitResource` クラスを以下のように編集します。"
 
@@ -631,61 +617,54 @@ msgstr ""
 
 #. type: Title ==
 #: upstream/_guides/mongodb.adoc:301
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Creating a frontend"
 msgstr "フロントエンドの作成"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:306
-#, fuzzy
 msgid "Now let's add a simple web page to interact with our `FruitResource`.  Quarkus automatically serves static resources located under the `META-INF/resources` directory.  In the `src/main/resources/META-INF/resources` directory, add a `fruits.html` file with the content from this {quickstarts-blob-url}/mongodb-quickstart/src/main/resources/META-INF/resources/fruits.html[fruits.html] file in it."
 msgstr "ここで、 `FruitResource` .Quarkusと対話するための簡単なウェブページを追加してみましょう。Quarkusは、 `META-INF/resources` ディレクトリーの下にある静的なリソースを自動的に提供します。 `src/main/resources/META-INF/resources` ディレクトリーに、この {quickstarts-blob-url}/mongodb-quickstart/src/main/resources/META-INF/resources/fruits.html[fruits.html]ファイルの内容を含む `fruits.html` ファイルを追加します。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:308
-#, fuzzy
 msgid "You can now interact with your REST service:"
 msgstr "これで、REST サービスと対話できるようになりました。"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:310
-#, fuzzy
 msgid "start Quarkus with `./mvnw compile quarkus:dev`"
-msgstr "Quarkusを起動する `./mvnw compile quarkus:dev`"
+msgstr "`./mvnw compile quarkus:dev` でQuarkusを起動"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:311
-#, fuzzy
 msgid "open a browser to `http://localhost:8080/fruits.html`"
-msgstr "ブラウザを開く `http://localhost:8080/fruits.html`"
+msgstr " `http://localhost:8080/fruits.html` をブラウザで開く"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:312
-#, fuzzy
 msgid "add new fruits to the list via the form"
-msgstr "フォームを使って新しいフルーツをリストに追加します"
+msgstr "フォームを使って新しいフルーツをリストに追加"
 
 #. type: Title ==
 #: upstream/_guides/mongodb.adoc:314
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Reactive MongoDB Client"
 msgstr "リアクティブな MongoDB クライアント"
 
 #. type: Plain text
 #: upstream/_guides/mongodb.adoc:318
-#, fuzzy
 msgid "A reactive MongoDB Client is included in Quarkus.  Using it is as easy as using the classic MongoDB Client.  You can rewrite the previous example to use it like the following."
 msgstr "リアクティブなMongoDBクライアントがQuarkusに含まれています。これを使うのは、古典的なMongoDBクライアントを使うのと同じくらい簡単です。先ほどの例を以下のように書き換えて使うことができます。"
 
 #. type: Block title
 #: upstream/_guides/mongodb.adoc:320
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Deprecation"
 msgstr "非推奨"
 
 #. type: delimited block =
 #: upstream/_guides/mongodb.adoc:324
-#, fuzzy
 msgid "The `io.quarkus.mongodb.ReactiveMongoClient` client is deprecated and will be removed in the future.  It is recommended to switch to the `io.quarkus.mongodb.reactive.ReactiveMongoClient` client providing the `Mutiny` API."
 msgstr "`io.quarkus.mongodb.ReactiveMongoClient` クライアントは非推奨であり、将来的には削除される予定です。 `Mutiny` API を提供する `io.quarkus.mongodb.reactive.ReactiveMongoClient` クライアントに切り替えることをお勧めします。"
 
@@ -697,9 +676,8 @@ msgstr "Mutiny"
 
 #. type: delimited block =
 #: upstream/_guides/mongodb.adoc:330
-#, fuzzy
 msgid "The MongoDB reactive client uses Mutiny reactive types, if you're not familiar with them, read the link:getting-started-reactive#mutiny[Getting Started with Reactive guide] first."
-msgstr "MongoDB のリアクティブクライアントは Mutiny link:getting-started-reactive#mutiny[の] リアクティブ型を使っています。"
+msgstr "MongoDB のリアクティブクライアントはMunityのリアクティブ型を使っています。 link:getting-started-reactive#mutiny[Reactive入門ガイド]を先にお読みください。"
 
 #. type: delimited block -
 #: upstream/_guides/mongodb.adoc:340
