--- a/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
+++ b/l10n/po/ja_JP/_guides/hibernate-orm.adoc.po
@@ -3,39 +3,38 @@
 # This file is distributed under the same license as the PACKAGE package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "POT-Creation-Date: 2021-03-11 15:12+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-03-16 22:40+0900\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #. This guide is maintained in the main Quarkus repository
 #. and pull requests should be submitted there:
 #. https://github.com/quarkusio/quarkus/tree/master/docs/src/main/asciidoc
 #. type: Title =
 #: upstream/_guides/hibernate-orm.adoc:6
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Quarkus - Using Hibernate ORM and JPA"
 msgstr "Quarkus - Hibernate ORMとJPAの使用"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:13
-#, fuzzy
 msgid "Hibernate ORM is the de facto standard JPA implementation and offers you the full breadth of an Object Relational Mapper.  It works beautifully in Quarkus."
-msgstr "Hibernate ORMは、事実上の標準的なJPA実装であり、オブジェクトリレーショナルマッパーの全幅を提供します。これはQuarkusで美しく動作します。"
+msgstr "Hibernate ORMは、デファクトスタンダートなJPA実装であり、オブジェクトリレーショナルマッパーの全幅を提供します。これはQuarkusで美しく動作します。"
 
 #. type: Title ==
 #: upstream/_guides/hibernate-orm.adoc:14
-#, fuzzy, no-wrap
+#, no-wrap
 msgid "Setting up and configuring Hibernate ORM"
-msgstr "Hibernate ORMの設定と設定"
+msgstr "Hibernate ORMのセットアップと設定"
 
 #. type: Plain text
 #: upstream/_guides/hibernate-orm.adoc:17
